# TorresHanoi

Hanoi-main/: Makefile.am  Makefile.in  configure  configure.ac
Hanoi-main/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
Hanoi-main/include/: animation_hanoi.h  animation_vara.h  hanoi.h  jugar.h  solucionar.h  stack.h
Hanoi-main/src/: animation_hanoi.c  animation_vara.c  hanoi.c  jugar.c  main.c  solucionar.c  stack.c
